# vibe-bug-hunting-trainer-agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  PROJECT-DEVELOPMENT-PHASE-TRACKING.md  PROJECT-detail.md  README.md  SECOND-KNOWLEDGE-BRAIN.md  docker-compose.yml  pyproject.toml
bughunter/: __init__.py
bughunter/api/: community.py
bughunter/cli/: main.py
bughunter/core/: agent_loop.py  ast_analyzer.py  config.py  git_isolation.py  knowledge_crawler.py  llm_client.py  logging.py  manifest.py  ml_classifier.py  mutation_engine.py  safety_gate.py  session_reporter.py  skill_profiler.py  spaced_repetition.py  team_mode.py  validators.py
bughunter/schemas/: models.py
bughunter/web/: app.py
vscode-extension/: README.md  package.json
vscode-extension/src/: extension.ts
