[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bughunter"
version = "0.1.0"
description = "Covert debug skill training system — secretly injects controlled bugs then coaches discovery"
readme = "CLAUDE.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "BugHunterAgent" }]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "loguru>=0.7",
    "cryptography>=42.0",
    "gitpython>=3.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-rust>=0.23",
    "radon>=6.0",
    "watchdog>=4.0",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=12.0",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Education",
]

[project.scripts]
bughunter = "bughunter.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["bughunter"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
